--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div><img src="bg_banner2.jpg" alt="Hello World from Space"
+        style="width:100%;"></div>
 <h1>Onestop</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
