--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <h1>Onestop</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
-
+<div><img src="logo.svg" alt="XPRESSFOX" ></div>
 </body>
 </html>
