Updated index.html Resized image

--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Onestop Git Repository</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div><img src="bg_banner2.jpg" alt="Hello World from Space"
-        style="width:100%;"></div>
-<h1>Onestop</h1>
-<p>This is the first file in my new Git Repo.</p>
-<<<<<<< HEAD
-<p>This line is here to show how merging works.</p>
 
-=======
-<p>A new line in our file!</p>
-<div><img src="logo.svg" alt="XPRESSFOX" ></div>
->>>>>>> hello-world-images
-</body>
+<head>
+        <title>Onestop Git Repository</title>
+        <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+        <h1>Onestop</h1>
+        <div>
+        <img src="bg_banner2.jpg" alt="Hello World from Space" style="width:100%;">
+        </div>
+        <p>This is the first file in my new Git Repo.</p>
+        <p>This line is here to show how merging works.</p>
+        <div><img src="logo.svg" alt="XPRESSFOX"></div>
+
 </html>
