--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
 <head>
         <title>Onestop Git Repository</title>
         <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+        <title>Onstop Git Repository</title>
+        <meta name="viewport" content="width=device-widht,initial-scale=1">
+        <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+        <h1>Onestop</h1>
+        <div>
+        <img src="bg_banner2.jpg" alt="Hello World from Space" style="width:100%;">
+        </div>
+        <p>This is the first file in my new Git Repo.</p>
+        <p>This line is here to show how merging works.</p>
+        <div><img src="logo.svg" alt="XPRESSFOX"></div>
         <h1>Onestop</h1>
         <div>
         <img src="bg_banner2.jpg" alt="Hello World from Space" style="width:100%;">
